AC_INIT(../include/ptlib.h)

AC_PROG_CXX

dnl ########################################################################
dnl set the PWLIB directory to the current directory

PWLIBDIR=`pwd`
echo "Plugin source directory is $PWLIBDIR";
AC_SUBST(PWLIBDIR)
dnl set the pwlib installation dir for pwlib-config
AC_SUBST(PWINSTDIR)

dnl ########################################################################
dnl set the PREFIX accordingly
if test "x$prefix" = "xNONE"; then
   INSTALLPREFIX="/usr/local"
else
   INSTALLPREFIX="${prefix}"
fi

AC_SUBST(INSTALLPREFIX)

dnl ########################################################################
dnl set LIBDIR accordingly
LIBDIR="${libdir}"
AC_SUBST(LIBDIR)

dnl #########################################################################
dnl check for Alsa sound support
dnl ########################################################################

AC_ARG_ENABLE(alsa, [  --enable-alsa           enable ALSA audio support],,enable_alsa=yes)

if test "$enable_alsa" = "yes" ; then
  AC_CHECK_HEADER(alsa/asoundlib.h, ALSAHDR=1)
  AC_MSG_CHECKING(for ALSA sound support)
  if test "${ALSAHDR:-unset}" != "unset"; then
    AC_SUBST(HAS_ALSA, 1)
    AC_MSG_RESULT(yes)
  else
    AC_MSG_RESULT(no)
  fi
fi

dnl #########################################################################
dnl check for OSS sound support
dnl ########################################################################

AC_ARG_ENABLE(oss, [  --enable-oss            enable OSS audio support],,enable_oss=yes)

if test "$enable_oss" = "yes" ; then
  AC_CHECK_HEADER(sys/soundcard.h, SNDCARDHDR=1)
  AC_MSG_CHECKING(for OSS sound support)
  if test "${SNDCARDHDR:-unset}" != "unset"; then
    AC_SUBST(HAS_OSS, 1)
    AC_MSG_RESULT(yes)
  else
    AC_MSG_RESULT(no)
  fi
fi

AC_ARG_ENABLE(video,
       [  --disable-video         disable video device support in PWLIB],
       video=$enableval)

if test "$video" != "no" ; then

dnl #########################################################################
dnl check for V4L video support
dnl ########################################################################

AC_ARG_ENABLE(v4l, [  --enable-v4l            enable V4L video support],,enable_v4l=yes)

if test "$enable_v4l" = "yes" ; then
  AC_CHECK_HEADER(linux/videodev.h, V4LHDR=1)
  AC_MSG_CHECKING(for V4L video support)
  if test "${V4LHDR:-unset}" != "unset"; then
    AC_SUBST(HAS_V4L, 1)
    AC_MSG_RESULT(yes)
  else
    AC_MSG_RESULT(no)
  fi
fi

dnl #########################################################################
dnl check for BSD video capture support
dnl ########################################################################

AC_ARG_ENABLE(bsdvideo, [  --enable-bsdvideo       enable BSD video support],,enable_bsdvideo=yes)

if test "$enable_bsdvideo" = "yes" ; then
  AC_CHECK_HEADER(machine/ioctl_meteor.h, BSDVIDEOHDR=1)
  AC_CHECK_HEADER(i386/ioctl_meteor.h, BSDVIDEOHDR=1)
  AC_CHECK_HEADER(dev/ic/bt8xx.h, BSDVIDEOHDR=1)
  AC_MSG_CHECKING(for BSD video support)
  if test "${BSDVIDEOHDR:-unset}" != "unset"; then
    AC_SUBST(HAS_BSDVIDEOCAP, 1)
    AC_MSG_RESULT(yes)
  else
    AC_MSG_RESULT(no)
  fi
fi

dnl #########################################################################
dnl check for AVC video support
dnl ########################################################################

AC_ARG_ENABLE(avc, [  --enable-avc            enable IEEE1394/AVC video support],,enable_avc=yes)

if test "$enable_avc" = "yes" ; then
  AC_CHECK_HEADER(libavc1394/avc1394.h, AVC1394HDR=1)
  AC_CHECK_HEADER(libdv/dv.h, DVHDR=1)
  AC_CHECK_HEADER(libraw1394/raw1394.h, RAW1394HDR=1)
  AC_MSG_CHECKING(for IEEE1394/AVC video support)
  if test "${AVC1394HDR:-unset}" != "unset" -a ${DVHDR:-unset} != "unset" -a "${RAW1394HDR:-unset}" != "unset"; then
    AC_SUBST(HAS_AVC1394, 1)
    AC_MSG_RESULT(yes)
  else
    AC_MSG_RESULT(no)
  fi
fi

dnl #########################################################################
dnl check for DC video support
dnl ########################################################################

AC_ARG_ENABLE(dc, [  --enable-dc             enable IEEE1394/DC video support],,enable_dc=yes)

if test "$enable_dc" = "yes" ; then
  AC_CHECK_HEADER(libdc1394/dc1394_control.h, DC1394HDR=1)
  AC_CHECK_HEADER(libraw1394/raw1394.h, RAW1394HDR=1)
  AC_MSG_CHECKING(for IEEE1394/DC video support)
  if test "${DC1394HDR:-unset}" != "unset" -a ${RAW1394HDR:-unset} != "unset"; then
    AC_SUBST(HAS_DC1394, 1)
    AC_MSG_RESULT(yes)
  else
    AC_MSG_RESULT(no)
  fi
fi

fi
dnl end of test for video

dnl ########################################################################
dnl output header file

AC_CONFIG_FILES(Makefile)

AC_OUTPUT()
